--- a/README.org
+++ b/README.org
@@ -83,7 +83,9 @@ See https://aur.archlinux.org/cgit/aur.git/tree/PKGBUILD?h=ossia-score
   Error: No Sound monitor found! Can't forward audio output
   #+end_quote
 
-  - [ ] check source code in order to get how it handles audio
+  - [X] check source code in order to get how it handles audio
+    - found the issue: it's only build for pulseaudio
+      - [[https://github.com/seijikun/desktopcast/blob/master/src/stream_server.rs#L99]]
 
 ** DONE fountain-rs
 CLOSED: [2023-11-29 Wed 16:03]
